# Magnum-Networking

./: .gitignore  CMakeLists.txt  README.md
inc/: APIHandler.h  Client.h  DedicatedServer.h  GameObject.h  GameWindow.h  ILifeCycle.h  LobbyWindow.h  LoginWindow.h  MessageType.h  World.h  World2.h  WorldSerializer.h
inc/Components/: BaseComponent.h  Collider.h  ISerializable.h  Rigidbody.h
online-services/: .gitignore  PRD.md  go.sum  main.go
online-services/controllers/: achievement_controller.go  matchmaking_controller.go  stats_controller.go  store_controller.go  user_controller.go
online-services/database/: db.go  test.db
online-services/middlewares/: admin_middleware.go  auth_middleware.go
online-services/models/: achievement.go  game.go  gameServer.go  matchmaking.go  stat.go  stats.go  store.go  user.go
online-services/static/css/: style.css
online-services/static/js/: admin_dashboard.js
online-services/tests/: achievement_controller_test.go  matchmaking_controller_test.go  models_test.go  stats_controller_test.go  store_controller_test.go  user_controller_test.go
online-services/utils/: utils.go
online-services/views/: admin_dashboard.html  admin_login.html  error.html
scenes/: scene
src/: APIHandler.cpp  BasicCube.cpp  BulletExample.cpp  Client.cpp  ClientMain.cpp  DedicatedServer.cpp  DedicatedServerMain.cpp  GameObject.cpp  GameWindow.cpp  LobbyWindow.cpp  LoginWindow.cpp  World.cpp  World2.cpp  WorldSerializer.cpp  client.cpp  imGUIEditor.cpp  imGUIExemple.cpp  main.cpp  server.cpp  test_enet6.cpp
src/Components/: BaseComponent.cpp  Collider.cpp  Rigidbody.cpp
